# plataforma-educacional-PIT

./: .env.sample  .gitignore  Dockerfile  docker-compose.test.yml  docker-compose.yml  manage.py  pyproject.toml  readme.md  testsss.py
.github/workflows/: build_and_deploy.yml  quality_tests.yml
ProjetoInterdisciplinar1/: asgi.py  settings.py  urls.py  wsgi.py
api/: admin.py  api.py  models.py  tests.py  utils.py
api/auth/: endpoints.py  schemas.py  tests.py
api/migrations/: 0001_initial.py
core/: admin.py  models.py
core/management/commands/: create_admin.py
core/migrations/: 0001_initial.py
